Fix HTML structure and add logo image

--- a/Prueba final/1.HTML/Formulario.html
+++ b/Prueba final/1.HTML/Formulario.html
@@ -90,7 +90,7 @@
 <input type="radio" name="eleccion" value="Más tarde"><strong>Más tarde</strong>
 <br>
 <br></label>
-
+    <div><img src="../3.FOTOS/FORMULARIO/logo2" id="logo"></div>
 <br>
 <br>
 <label><input class="blanco" type="submit" value="Enviar">
@@ -99,4 +99,5 @@
     </fieldset>
 </form>    
 </body>
+
 </html>
