Fix HTML structure and update form elements

--- a/Prueba final/1.HTML/Formulario.html
+++ b/Prueba final/1.HTML/Formulario.html
@@ -94,11 +94,12 @@
 <br>
 <label><input class="blanco" type="submit" value="Enviar">
 <input class="blanco" type="reset" value="Reiniciar Formulario"></label>
-
+<div><img src="../3.FOTOS/FORMULARIO/logo2.png" id="logo2"></div>
     </fieldset>
 <div><img src="../3.FOTOS/FORMULARIO/logo2" id="logo"></div>
 </form>    
 </body>
 
 </html>
+
 
