--- a/Prueba final/1.HTML/Formulario.html
+++ b/Prueba final/1.HTML/Formulario.html
@@ -58,9 +58,9 @@
 <label>Selecciona los campos correspondientes:
 <br></label>
 <div>
-<input type="radio" name="sexo" value="masculino"> Hombre
-<input type="radio" name="sexo" value="femenino"> Mujer 
-<input type="radio" name="sexo" value="otro"> Otro </div>
+<input type="checkbox" name="sexo" value="masculino"> Hombre
+<input type="checkbox" name="sexo" value="femenino"> Mujer 
+<input type="checkbox" name="sexo" value="otro"> Otro </div>
 <br>
 <label>------------------------------------<br>
     Opciones del coche <br>
@@ -100,5 +100,6 @@
 </body>
 
 </html>
+
 
 
